--- a/index.html
+++ b/index.html
@@ -24,9 +24,18 @@
 <body>
 
     <div class="container-fluid">
+		<div class="row" id="maps">
+            <div class="col-md-8" id="map">
+            </div>
+			<div class="col-md-8" id="paths">
+            </div>
+        </div>
+		<div class="row">
+            <div class="col-md-12" id="network">
+            </div>
+        </div>
         <div class="row">
-            <div class="col-md-12">
-				<h1>PUT STUFF HERE</h1>
+            <div class="col-md-12" id="gantt-chart">
             </div>
         </div>
     </div>
