--- a/index.html
+++ b/index.html
@@ -25,17 +25,29 @@
 
     <div class="container-fluid">
 		<div class="row" id="maps">
-            <div class="col-md-8" id="map">
+            <div class="col-md-12" id="map">
+                <svg width=100% id="map" >
+                    <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
+                  </svg>
             </div>
-			<div class="col-md-8" id="paths">
+			<div width=100% id="paths">
+                <svg class="col-md-12" id="paths">
+                    <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
+                  </svg>
             </div>
         </div>
 		<div class="row">
             <div class="col-md-12" id="network">
+                <svg width=100% id="network" >
+                    <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
+                  </svg>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12" id="gantt-chart">
+                <svg width=100%  id="gantt-chart" >
+                    <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
+                  </svg>
             </div>
         </div>
     </div>
