--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./styles/main.css" />
 
     <!-- JS Libraries -->
+    <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.6/d3.min.js"></script>
@@ -51,6 +52,23 @@
             </div>
         </div>
     </div>
+    <script>
+    d3.queue()
+    .defer(d3.csv,"data/455_pharmacies.csv")
+    .defer(d3.csv,"data/500_doctors.csv")
+    .defer(d3.csv,"data/5000_patients.csv")
+    .defer(d3.csv,"data/27073_prescriptions.csv")
+    .await(start_here);
+
+    function start_here(error, PHARMACY_LOC, DOCTOR_LOC, PATIENT_LOC,PRESCRIPTION_LOC) {
+        
+        if (error) return console.log(error);
+        console.log(DOCTOR_LOC)
+
+        }
+
+    
+    </script>
 
 </body>
 </html>
