--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.6/d3.min.js"></script>
 
     <!-- JS Source -->
-    <!--script src="./scripts/map.js"></script-->
+	<script src="./scripts/load_database.js"></script>
+    <script src="./scripts/timeline.js"></script>
 
 
 </head>
@@ -46,28 +47,29 @@
         </div>
         <div class="row">
             <div class="col-md-12" id="gantt-chart">
-                <svg width=100%  id="gantt-chart" >
-                    <circle cx="50" cy="50" r="40" stroke="green" stroke-width="4" fill="yellow" />
-                  </svg>
             </div>
         </div>
     </div>
     <script>
     d3.queue()
-    .defer(d3.csv,"data/455_pharmacies.csv")
-    .defer(d3.csv,"data/500_doctors.csv")
-    .defer(d3.csv,"data/5000_patients.csv")
-    .defer(d3.csv,"data/27073_prescriptions.csv")
+    .defer(d3.csv,"https://gist.githubusercontent.com/tehwentzel/24bf8357ad86a3db70510480b020d7d3/raw/4468783d3445b83b4350ac1c1327a0b592c8cfdf/455_pharmacies.csv")
+    .defer(d3.csv,"https://gist.githubusercontent.com/tehwentzel/24bf8357ad86a3db70510480b020d7d3/raw/4468783d3445b83b4350ac1c1327a0b592c8cfdf/500_doctors.csv")
+    .defer(d3.csv,"https://gist.githubusercontent.com/tehwentzel/24bf8357ad86a3db70510480b020d7d3/raw/4468783d3445b83b4350ac1c1327a0b592c8cfdf/5000_patients.csv")
+    .defer(d3.csv,"https://gist.githubusercontent.com/tehwentzel/24bf8357ad86a3db70510480b020d7d3/raw/4468783d3445b83b4350ac1c1327a0b592c8cfdf/27073_prescriptions.csv")
     .await(start_here);
 
     function start_here(error, PHARMACY_LOC, DOCTOR_LOC, PATIENT_LOC,PRESCRIPTION_LOC) {
         
         if (error) return console.log(error);
-        console.log(DOCTOR_LOC)
+        console.log(PRESCRIPTION_LOC);
+		timeline = new TimeLine(2121437, PRESCRIPTION_LOC);
+		timeline.setColor("#e6550d");
+		//timeline.setDrug("HYDRoCODONE");
+		timeline.setStartDate('02/02/2014');
+		//timeline.setID(2112697);
+		//console.log(timeline);
+    }
 
-        }
-
-    
     </script>
 
 </body>
