added filtering for timeline

--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.2.6/d3.min.js"></script>
 
     <!-- JS Source -->
-	<script src="./scripts/load_database.js"></script>
-    <script src="./scripts/timeline.js"></script>
+	<script src="./scripts/timeline.js"></script>
 
 
 </head>
@@ -46,8 +45,10 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-md-12" id="gantt-chart">
+            <div class="col-md-8" id="gantt-chart">
             </div>
+			<div class="col-md-4" id="gantt-filters">
+			</div>
         </div>
     </div>
     <script>
@@ -63,10 +64,15 @@
         if (error) return console.log(error);
         console.log(PRESCRIPTION_LOC);
 		timeline = new TimeLine(2121437, PRESCRIPTION_LOC);
-		timeline.setColor("#e6550d");
-		//timeline.setDrug("HYDRoCODONE");
+		//timeline.setColor("#e6550d");
+		////timeline.setDrug("HYDRoCODONE");
 		timeline.setStartDate('02/02/2014');
-		//timeline.setID(2112697);
+		//timeline.setEndDate('9/02/2014');
+		timeline.setupDrugFilter();
+		console.log(timeline.getDrugNames());
+		timeline.setID(2112697);
+		timeline.setupTimeFilter();
+		//timeline.setupDrugFilter();
 		//console.log(timeline);
     }
 
