added map color parameter

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         
         if (error) return console.log(error);
         // console.log(PRESCRIPTION_LOC);
-		patients = drawMap(PATIENT_LOC,'map');
-		pharms = drawMap(PHARMACY_LOC,'paths');
+		patients = drawMap(PATIENT_LOC,'map','red');
+		pharms = drawMap(PHARMACY_LOC,'paths','steelblue');
 		timeline = new TimeLine(selected_id, PRESCRIPTION_LOC);
 		//n=new NetworkGraph(selected_id,NODE_GRAPH);
 		struct=createStruct(selected_id,NODE_GRAPH);
