fixed tooltips and added color encoding on map

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         if (error) return console.log(error);
         // console.log(PRESCRIPTION_LOC);
 		patients = drawMap(PATIENT_LOC,'map','red');
-		pharms = drawMap(PHARMACY_LOC,'paths','steelblue');
+		pharms = drawMap(PHARMACY_LOC,'paths','aqua');
 		timeline = new TimeLine(selected_id, PRESCRIPTION_LOC);
 		//n=new NetworkGraph(selected_id,NODE_GRAPH);
 		struct=createStruct(selected_id,NODE_GRAPH);
