--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 				<h4>Patient-Doctor/Pharmacy Connections</h4>
 			</div>
 			<div class='col-md-6'>
-				<h4>Patient prescriptions vs Time</h4>
+				<h4 id='timeline-title'>Patient prescriptions vs Time</h4>
 			</div>
 		</div>
         <div class="row" id="gantt-items">
