fixed indi_pat value in show1()

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	}
 
 	function show1(){
-		indi_pat = false;
+		indi_pat = true;
   		document.getElementById('maps2').style.display ='none';
   		document.getElementById('maps').style.display ='block';
   		selected_id = 2098621;
