--- a/index.html
+++ b/index.html
@@ -86,18 +86,11 @@
     .defer(d3.csv,"https://gist.githubusercontent.com/tehwentzel/24bf8357ad86a3db70510480b020d7d3/raw/4468783d3445b83b4350ac1c1327a0b592c8cfdf/500_doctors.csv")
     .defer(d3.csv,"https://gist.githubusercontent.com/tehwentzel/24bf8357ad86a3db70510480b020d7d3/raw/4468783d3445b83b4350ac1c1327a0b592c8cfdf/5000_patients.csv")
     .defer(d3.csv,"https://gist.githubusercontent.com/tehwentzel/24bf8357ad86a3db70510480b020d7d3/raw/4468783d3445b83b4350ac1c1327a0b592c8cfdf/27073_prescriptions.csv")
-<<<<<<< HEAD
-	.defer(d3.csv,"https://raw.githubusercontent.com/tehwentzel/VDS_Opioid_Abuse_Visualization/master/data/node_graph1.csv?token=Ah_SvLgamzIb9eWrAaZ3MG3u4zWm7fVoks5b_vcLwA%3D%3D")
+	.defer(d3.csv,"https://gist.githubusercontent.com/tehwentzel/77c2e8602878214e470163dede3faede/raw/09a47838aa75987212c408e3b4382c6f7949b7bd/node_graph1.csv")
     .await(start_here);
 	
-=======
-	.defer(d3.csv,"./data/node_graph1.csv")
-    .await(start_here);
-	selected_id =866254390;
->>>>>>> doctors-line
     function start_here(error, PHARMACY_LOC, DOCTOR_LOC, PATIENT_LOC,PRESCRIPTION_LOC,NODE_GRAPH) {
         if (error) return console.log(error);
-<<<<<<< HEAD
 		console.log("running");
 		var patientMap = getMap('patient');
 		var pathMap = getMap('paths');
@@ -121,21 +114,20 @@
 		var setDotOnClick = g => g.on('click', function(d){
 			if(is_patient){
 				timeline.setID(d.pat_id, "Patient", null);
-				struct=createStruct(d.pat_id,NODE_GRAPH);
-				tryS(struct);
+				CallingNodeGraph(d.pat_id, NODE_GRAPH, 'patient');
 			}
 			else{
 				timeline.setID(d.physiciannpi, "Doctor", null);
-				//struct=createStruct(d.physiciannpi,NODE_GRAPH);
-				//tryS(struct);
+				CallingNodeGraph(d.physiciannpi, NODE_GRAPH, 'doctor');
 			}
 		});
 		
 		var [addresses, paths] = change_indiLoc(PHARMACY_LOC, DOCTOR_LOC, PATIENT_LOC,PRESCRIPTION_LOC);
        
 		timeline = new TimeLine(selected_id, PRESCRIPTION_LOC, is_patient? "Patient":"Doctor");
-		struct = createStruct(selected_id,NODE_GRAPH);
-        tryS(struct);
+		//struct = createStruct(selected_id,NODE_GRAPH);
+        //tryS(struct);
+		CallingNodeGraph(selected_id, NODE_GRAPH, "patient")
 		addresses.call(setDotOnClick);
 		var patientSelection = d3.select("#radio").selectAll("input").on('click',function(d){
 			var was_patient = (is_patient)? true:false;
@@ -146,22 +138,16 @@
 				[addresses, paths] = change_indiLoc(PHARMACY_LOC, DOCTOR_LOC, PATIENT_LOC,PRESCRIPTION_LOC);
 				addresses.call(setDotOnClick);
 			}
-=======
-        // console.log(PRESCRIPTION_LOC);
-		patients = drawMap(PATIENT_LOC,'map');
-		pharms = drawMap(PHARMACY_LOC,'paths');
-		timeline = new TimeLine(selected_id, PRESCRIPTION_LOC);
-		//n=new NetworkGraph(selected_id,NODE_GRAPH);
-		CallingNodeGraph(selected_id,NODE_GRAPH,type)
-		console.log(patients);
-		patients.on('click', function(d){
-			timeline.setID(d.pat_id);
-			
->>>>>>> doctors-line
 		});
     }
-
     </script>
+
+    <!-- <script src='scripts/mapapp.js'></script> -->
+
+    
+
+</body>
+</html>
 
     <!-- <script src='scripts/mapapp.js'></script> -->
 
