--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
     <div class="container-fluid">
 		<div class="row mt-0 p-0">
 			<div class='col-md-6' id="patientHeader">
-				<h3 style="display:inline-block">
-					Patient Locations
-				</h3>
+				<h4 style="display:inline-block; color:gray">
+					Patient/Doctor Locations
+				</h4>
 			</div>
 			<div class='col-md-6'>
-				<h3>Pharmacy Locations (Placeholder)</h3>
+				<h4 style="color:gray">Pharmacy Locations</h4>
 			</div>
 		</div>
 		<div class="row" id="maps">
             <div class="col-md-6" id="patient">
-                <svg width=100% id="patsvg" height="400px"></svg>
+                <svg width=400px id="patsvg" height="400px"></svg>
                
             </div>
 			<div class="col-md-6" id="paths">
-                <svg width=100% id="pathsvg" height="400px"></svg>
+                <svg width=400px id="pathsvg" height="400px"></svg>
             </div>
         </div>
         <div class="row" id="maps2" style="display:none">
@@ -62,13 +62,13 @@
         </div>
 		<div class="row">
 			<div class='col-md-6'>
-				<h4>Patient-Doctor/Pharmacy Connections</h4>
+				<h4 style="color:gray">Patient-Doctor/Pharmacy Connections</h4>
 			</div>
 			<div class='col-md-6'>
-				<h4 id='timeline-title'>Patient prescriptions vs Time</h4>
+				<h4 id='timeline-title' style="color:gray">Patient prescriptions vs Time</h4>
 			</div>
 		</div>
-        <div class="row" id="gantt-items">
+        <div class="row" id="gantt-items" style="background-color: #202020">
 			<div class="col-md-6" id="network">
 			 </div>
 			<div class="col-md-6" id="gantt-chart">
@@ -82,7 +82,7 @@
 		<input type="radio" name="people" id="doctorRadioSwitch" value="0" >By Doctors<br>
 	</div>
 	
-	<button type="button" id="backButton">Back</button>
+	<button type="button" class="back" id="backButton">Back</button>
 
     </div>
     <script>
@@ -105,9 +105,10 @@
 		var is_patient = true;
 		var selected_id = 2098621;
 		var currentSelection = {id: selected_id, type: "Patient"};
-		var initGraphOnClick = function(){
+		var initGraphOnClick = function(selected_id){
 			d3.select('.nodes').selectAll('circle').on('click',function(d){
 				if(d.group == 'patient' || d.group == 'doctor'){
+					console.log("selected_id", selected_id);
 					backStack.push(currentSelection);
 					timeline.setID(d.id, capitalizeFirstLetter(d.group), null);
 					paths = pathMap(PHARMACY_LOC, PRESCRIPTION_LOC,'paths', (d.group == 'patient'), d.id);
@@ -118,19 +119,19 @@
 				}
 			});
 		}
-		var change_indiLoc = function(PHARMACY, DOCTOR, PATIENT,PRESCRIPTION){
+		var change_indiLoc = function(PHARMACY, DOCTOR, PATIENT,PRESCRIPTION, selected_id){
 			var addresses;
 			var paths;
 			if(is_patient == true){
 				addresses = patientMap(PATIENT, PRESCRIPTION, 'patient', is_patient);
 				//paths = pathMap(PHARMACY, PRESCRIPTION, 'paths', is_patient);
-				valueSlider.draw(PATIENT_LOC, 'patient');
+				valueSlider.draw(PATIENT_LOC, 'patient', selected_id);
 				// console.log("count1", count)
 			}
 			else{
 				addresses = patientMap(DOCTOR, PRESCRIPTION, 'patient', is_patient);
 				//paths = pathMap(PHARMACY, PRESCRIPTION, 'paths', is_patient);
-				valueSlider.draw(DOCTOR_LOC, 'doctor');
+				valueSlider.draw(DOCTOR_LOC, 'doctor', selected_id);
 				// console.log("count2", count)
 			}
 			valueSlider.setOnClick(change_indiLoc,PHARMACY_LOC, DOCTOR_LOC, PATIENT_LOC,PRESCRIPTION_LOC);
