--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
     <div class="container-fluid">
 		<div class="row mt-0 p-0">
 			<div class='col-md-6' id="patientHeader">
-				<h3 style="display:inline-block">
-					Patient Locations
-				</h3>
+				<h4 style="display:inline-block; color:gray">
+					Patient/Doctor Locations
+				</h4>
 			</div>
 			<div class='col-md-6'>
-				<h3>Pharmacy Locations (Placeholder)</h3>
+				<h4 style="color:gray">Pharmacy Locations</h4>
 			</div>
 		</div>
 		<div class="row" id="maps">
             <div class="col-md-6" id="patient">
-                <svg width=100% id="patsvg" height="400px"></svg>
+                <svg width=400px id="patsvg" height="400px"></svg>
                
             </div>
 			<div class="col-md-6" id="paths">
-                <svg width=100% id="pathsvg" height="400px"></svg>
+                <svg width=400px id="pathsvg" height="400px"></svg>
             </div>
         </div>
         <div class="row" id="maps2" style="display:none">
@@ -62,13 +62,13 @@
         </div>
 		<div class="row">
 			<div class='col-md-6'>
-				<h4>Patient-Doctor/Pharmacy Connections</h4>
+				<h4 style="color:gray">Patient-Doctor/Pharmacy Connections</h4>
 			</div>
 			<div class='col-md-6'>
-				<h4 id='timeline-title'>Patient prescriptions vs Time</h4>
+				<h4 id='timeline-title' style="color:gray">Patient prescriptions vs Time</h4>
 			</div>
 		</div>
-        <div class="row" id="gantt-items">
+        <div class="row" id="gantt-items" style="background-color: #202020">
 			<div class="col-md-6" id="network">
 			 </div>
 			<div class="col-md-6" id="gantt-chart">
@@ -82,7 +82,7 @@
 		<input type="radio" name="people" id="doctorRadioSwitch" value="0" >By Doctors<br>
 	</div>
 	
-	<button type="button" id="backButton">Back</button>
+	<button type="button" class="back" id="backButton">Back</button>
 
     </div>
     <script>
@@ -99,9 +99,10 @@
 		valueSlider.setScale(PATIENT_LOC, DOCTOR_LOC, PHARMACY_LOC);
 		valueSlider.draw(PATIENT_LOC,"patient");
 		console.log("running");
+		colorPicker = colorSelector(PATIENT_LOC, DOCTOR_LOC, PHARMACY_LOC);
 		var backStack = new Array();
-		var patientMap = getMap('patient');
-		var pathMap = getMap('paths');
+		var patientMap = getMap('patient', colorPicker);
+		var pathMap = getMap('paths', colorPicker);
 		var is_patient = true;
 		var selected_id = 2098621;
 		var currentSelection = {id: selected_id, type: "Patient"};
@@ -152,7 +153,7 @@
 				paths = pathMap(PHARMACY_LOC, PRESCRIPTION_LOC, 'paths', is_patient, d.physiciannpi);
 			}
 			initGraphOnClick();
-			console.log(backStack);
+			//console.log(backStack);
 		});
 		var [addresses, paths] = change_indiLoc(PHARMACY_LOC, DOCTOR_LOC, PATIENT_LOC,PRESCRIPTION_LOC);
 		timeline = new TimeLine(selected_id, PRESCRIPTION_LOC, is_patient? "Patient":"Doctor");
