--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 <body>
 
     <div class="container-fluid">
+		
 		<div class="row mt-0 p-0">
-			<div class='col-md-6' id="patientHeader">
+			<div class='col-md-6'>
 				<h4 style="display:inline-block; color:gray">
 					Patient/Doctor Locations
 				</h4>
@@ -83,6 +84,8 @@
 	</div>
 	
 	<button type="button" class="back" id="backButton">Back</button>
+	<div id="patientHeader">
+	</div>
 
     </div>
     <script>
